# attestport

./: INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  SOURCES.md  pyproject.toml
.github/workflows/: ports.yml
attestport/: __init__.py  __main__.py  ai.py  cli.py  connect.py  core.py  mcp_server.py  vulnmatch.py
demos/01-basic/: SCENARIO.md  policy.json
demos/01-basic/demoproj/: app.py  package-lock.json  requirements.txt
docs/: ARCHITECTURE.md
examples/: help.txt  version.txt
ports/: README.md
ports/go/: attestport.go  attestport_test.go  go.mod
ports/node/: attestport.mjs  attestport.test.mjs
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_connect.py  test_core_edge.py  test_datafeeds.py  test_deep.py  test_smoke.py  test_vulndb_local.py  test_vulnmatch.py
