[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-attestport"
version = "0.1.1"
description = "Air-gap software supply-chain gate — SBOM (CycloneDX), SLSA/in-toto-style provenance + signature, CI policy gate"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["sbom", "supply-chain", "slsa", "in-toto", "cyclonedx", "devsecops", "cognis-digital", "cognis-neural-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/attestport"

[project.scripts]
"attestport-emit" = "attestport.connect:emit_main"
attestport = "attestport.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["attestport"]

[tool.hatch.build.targets.wheel.force-include]
"attestport/cognis_vulndb.jsonl.gz" = "attestport/cognis_vulndb.jsonl.gz"
"attestport/data_feeds_2026.json" = "attestport/data_feeds_2026.json"

[tool.hatch.metadata]
allow-direct-references = true
